# pixorter

./: .pre-commit-config.yaml  LICENSE  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
pixorter/: __main__.py  date_extract.py  file_manip.py  picture.py  picture_manip.py
src/pixorter/: __init__.py  date_extract.py  globals.py  picture.py  picture_manip.py
